k8s/http_server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http-server-srv
  selector:
    app: http-server
