k8s/http_server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: http-server.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server
                port:
                  name: http-server-srv
    # - host: hello-jane.test
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: hello-world-app
    #             port:
    #               number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: kube-system
spec:
  type: ExternalName
  externalName: http-server.default.svc.cluster.local
